--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "start": "node dist/index.js",
+    "test": "npm run build && node --test 'tests/**/*.test.ts'",
+    "test:unit": "npm run build && node --test 'tests/config/*.test.ts'",
+    "test:integration": "npm run build && node --test tests/index.test.ts",
+    "test:watch": "node --test --watch 'tests/**/*.test.ts'",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier . --check",
